<resources>
    <string name="app_name">VehiclePro</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此框为必填</string>
    <string name="remember_password">记住密码</string>


    <string name="title_home">首页</string>
    <string name="title_status">状态</string>
    <string name="title_market">市场</string>
    <string name="title_personal">我的</string>
    <string name="account_pic_desc">用户头像</string>
    <string name="user_id">ID:0323587232</string>
    <string name="total_mileage">总里程</string>
    <string name="next_maintenance">距离下次保养</string>
    <string name="warning">警告</string>
    <string name="no_engine_oil">您的机油已临近下限，请及时补充。</string>
    <string name="common_problems">常见问题</string>
    <string name="screen_scratch">屏幕划伤</string>
    <string name="hardware_problems">硬件故障</string>
    <string name="software_problems">软件故障</string>
    <string name="contact_service">联系客服</string>

</resources>
