<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4c4c66"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3c3a4c"
            android:padding="10dp"
            android:text="@string/title_home"
            android:textAlignment="center"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/account_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/account_pic_desc"
            android:padding="12dp"
            android:src="@drawable/ic_account_circle_white_128dp" />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/user_id"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/total_mileage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:text="@string/total_mileage"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_mileage_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/total_mileage_text"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:text="2552km"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/separate_line"
            android:layout_width="2dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:padding="10dp" />


        <TextView
            android:id="@+id/next_maintain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/separate_line"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/next_maintenance"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/next_maintenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/next_maintain_text"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:text="5d"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/bg_gradient1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon1"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon2"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon3"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon4"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon5"
            tools:ignore="contentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon6"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon7"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon8"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon9"
            tools:ignore="contentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/icon10"
            tools:ignore="contentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/warning"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/no_engine_oil"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>